--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,10 @@ body {
   background-color: aquamarine;
 }
 
+button:focus {
+  outline: none;
+}
+
 .sortingVisualizer {
   width: 100vw;
   height: 100vh;
@@ -13,19 +17,33 @@ body {
 .header {
   width: 100%;
   height: 100px;
-  background-color: #457ee9;
+  background-color: coral;
   border-bottom: 1px solid white;
 }
 
 .header .headerBttns {
   display: flex;
   justify-content: center;
-  padding-top: 30px;
+  padding-top: 20px;
 }
 
 .header button {
   display: inline-block;
   margin-left: 50px;
+  width: 200px;
+  height: 50px;
+  border: none;
+  border-radius: 10px;
+  background-color: #ffffff;
+  color: coral;
+  font-size: 20px;
+  font-weight: 700;
+  transition: all 0.5s ease;
+}
+
+.header button:hover {
+  cursor: pointer;
+  box-shadow: 2px 2px 10px black;
 }
 
 .arrayContainer {
@@ -34,7 +52,7 @@ body {
   left: 120px;
 }
 
-.sortingVisualizer #bar {
+.sortingVisualizer .bar {
   width: 10px;
   background-color: coral;
   margin-left: 4px;
