--- a/src/App.css
+++ b/src/App.css
@@ -17,8 +17,8 @@ button:focus {
 .header {
   width: 100%;
   height: 100px;
-  background-color: coral;
-  border-bottom: 1px solid white;
+  background-color: #ff7f50;
+  border-bottom: 1px solid #ffffff;
 }
 
 .header .headerBttns {
@@ -43,7 +43,44 @@ button:focus {
 
 .header button:hover {
   cursor: pointer;
-  box-shadow: 2px 2px 10px black;
+  box-shadow: 2px 2px 10px #000000;
+}
+
+.arrayControllers {
+  display: flex;
+  margin-top: 20px;
+  margin-left: 550px;
+}
+
+.arrayControllers #velocity {
+  margin-left: 50px;
+}
+.arrayControllers button {
+  width: 120px;
+  height: 60px;
+  border: none;
+  border-radius: 7px;
+  background-color: cornflowerblue;
+  color: #ffffff;
+  opacity: 0.7;
+  font-size: 18px;
+  font-weight: 700;
+  margin-left: 10px;
+}
+
+.arrayControllers button:hover {
+  cursor: pointer;
+  opacity: 1;
+}
+
+.arrayControllers #selected {
+  opacity: 1;
+}
+
+.arrayControllers #restart {
+  background-color: #ff7f50;
+  border: 1px solid white;
+  opacity: 1;
 }
 
 .arrayContainer {
@@ -54,7 +91,7 @@ button:focus {
 
 .sortingVisualizer .bar {
   width: 10px;
-  background-color: coral;
+  background-color: #ff7f50;
   margin-left: 4px;
   display: inline-block;
 }
