--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@ body {
   padding: 0;
   margin: 0;
   background-color: aquamarine;
+  font-family: monospace;
 }
 
 button:focus {
@@ -60,7 +61,7 @@ button:focus {
   height: 60px;
   border: none;
   border-radius: 7px;
-  background-color: cornflowerblue;
+  background-color: #6495ed;
   color: #ffffff;
   opacity: 0.7;
   font-size: 18px;
@@ -94,4 +95,26 @@ button:focus {
   background-color: #ff7f50;
   margin-left: 4px;
   display: inline-block;
+  border-radius: 10px;
+}
+
+.algorithmInfo {
+  position: absolute;
+  bottom: 10px;
+  left: 120px;
+  width: 1400px;
+  height: 70px;
+  border: 5px solid #6495ed;
+  border-radius: 5px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.algorithmInfo div {
+  margin-left: 30px;
+  color: #ff7f50;
+  font-size: 25px;
+  font-weight: 800;
 }
