--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 html, body {
   padding: 0;
   margin: 0;
-  background-color: aquamarine;
+  background-color: #f1f1f1;
   font-family: monospace;
 }
 
